--- a/posreport.html
+++ b/posreport.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POS Report</title>
+    <title>POS Profit Report</title>
 </head>
 <body>
     <h2>POS Report</h2>
-    <p>Your Total Expense of this month:</p><br>
-    <p>Your Profit:</p><br>
-    <p>Your Loss:</p><br>
+    <p>Your Total Expense of this month:&nbsp;</p><br>
+    <p>Your Profit:&nbsp;</p><br>
+    <p>Your Loss:&nbsp;</p><br>
 </body>
 </html>
