--- a/pos.html
+++ b/pos.html
@@ -7,7 +7,7 @@
     <title>POS report</title>
 </head>
 <body>
-    <h2>POS Report</h2>
+    <h2>Generate POS Profit Report</h2>
     <form>
         <label for="from">From Date:</label>
         <input type="date" name="date" value="date"><br>
