--- a/managerlogin.html
+++ b/managerlogin.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h2>Manager Login</h2>
     <div id="Clerk" class="tabcontent">
         <form class="login">
             <div class="email">
